crates/test-files/fixtures/compile_errors/cannot_move.fe
contract Foo:
    data: u256[10]

    pub fn foo(self) -> u256[10]:
        return self.data
